[package]
name = "curl-sys"
version = "0.1.0"
edition = "2021"
links = "curl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.65"

[dependencies]
openssl-sys = { git = "https://github.com/kyunghoon/openssl-sys.git", tag="0.0.2" }
